tests/paczka1/fuzzy1/37329258.err
Error in line 4: 2JXV S47 21,8
Error in line 9: A383 A383 78,7
